--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,14 @@
     --secondary: var(--purple);
 }
 
-* {
-    font-family: 'Roboto', sans-serif;
+*, &::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+
+  height: 100%;
 }
