--- a/components/header.css
+++ b/components/header.css
@@ -1,30 +1,28 @@
 .header {
   padding-top: 24px;
-}
 
-.header .header__content {
   display: flex;
   flex-direction: column;
 }
 
-.header .header__logo-and-nav {
+.header__logo-and-nav {
   display: flex;
   justify-content: space-between;
 }
 
-.header .header__logo {
+.header__logo {
 }
 
-.header .header__nav-and-controls {
+.header__nav-and-controls {
   display: flex;
   column-gap: 56px;
 }
 
-.header .header__nav {}
+.header__nav {}
 
-.header .header__controls {}
+.header__controls {}
 
-.header .header__title {
+.header__title {
   color: var(--black, #212429);
 
   /* h1 */
