--- a/components/main.css
+++ b/components/main.css
@@ -1,29 +1,20 @@
 .main {
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto;
-
-  background: #F9FAFC;
-
   display: flex;
   flex-direction: column;
-}
+  row-gap: 64px;
 
-.main .main__content {
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto;
-
-  margin-top: 68px;
-  margin-bottom: 92px;
+  padding-top: 68px;
+  padding-bottom: 92px;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+
 
   height: inherit;
 }
 
-.main .main__cards {}
+.main__cards {}
 
-.main .main__controls {}
+.main__controls {}
