--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,6 +1,8 @@
 /* Стилизация аккордеона */
 
-.accordion {
+.accordion {}
+
+.accordion__details {
   border: 1px solid var(--grey-3);
   border-radius: 8px;
   overflow: hidden;
