--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,35 +1,40 @@
 .footer {
-  padding-top: 72px;
-  padding-bottom: 136px;
-
-  text-align: center;
+  background: #FFF;
 }
 
-.footer__about {
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  align-items: center;
+
+  padding-top: 71px;
+  padding-bottom: 136px;
+}
+
+.footer__title {
   color: var(--black, #212429);
 
+  width: fit-content;
+
   /* h2 */
+  /* font-family: Inter; */
   font-size: 38px;
   font-style: normal;
   font-weight: 500;
   line-height: 48px; /* 126.316% */
 }
 
-.footer__description {
+.footer__desc {
   color: var(--black, #212429);
   text-align: center;
 
+  width: 640px;
+
   /* p */
+  /* font-family: Inter; */
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 150% */
-
-  max-width: 640px;
-  text-align: center;
-
-  margin-top: 32px;
-
-  margin-left: auto;
-  margin-right: auto;
 }
