--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,6 +1,46 @@
 .card {
-  background-color: red;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-  width: 350px;
-  height: 367px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+
+  background: #FFF;
+  border-radius: 12px;
+  box-shadow: 0px 2px 4px 0px rgba(33, 36, 41, 0.05);
+}
+
+.card__preview {
+  height: 100%;
+}
+
+.card__bottom {}
+
+.card__title {
+  text-align: center;
+
+  color: var(--black, #212429);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.card__desc {
+  margin-top: 6px;
+
+  text-align: center;
+
+  color: var(--gray-4, #495057);
+  text-align: center;
+  /* font-family: Roboto; */
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
