--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -1,66 +1,56 @@
 .skeleton {
-  display: flex;
-  flex-direction: column;
-  row-gap: 24px;
-
   border: 1px solid var(--gray-3, #ACB5BD);
   border-radius: 8px;
-
-  /* width: 100%; */
 
   padding-top: 24px;
   padding-left: 24px;
   padding-bottom: 32px;
   padding-right: 40px;
+
+  display: grid;
+  row-gap: 24px;
 }
 
 .skeleton__header {
-  display: flex;
+  display: grid;
+  justify-content: space-between;
   column-gap: 16px;
   align-items: center;
+
+  grid-template-columns: auto 1fr;
 }
 
 .skeleton__avatar {
   width: 64px;
   height: 64px;
+  background-color: var(--gray-2, #DDE2E5);
 
-  border-radius: 100%;
-
-  background-color: var(--gray-2, #DDE2E5);;
-}
-
-.skeleton__titles {
-  display: flex;
-  flex-direction: column;
-  row-gap: 8px;
-
-  width: 100%;
+  border-radius: 50%;
 }
 
 .skeleton__title {
-  height: 20px;
-
-  background: linear-gradient(93deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
-}
-
-.skeleton__title_short {
-  width: 32.39171375%;
-
-}
-
-.skeleton__title_half {
-  width: 48.3992467%;
-}
-
-.skeleton__content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
   row-gap: 8px;
 }
 
-.skeleton__content-item {
+.skeleton__content {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  row-gap: 8px;
+}
+
+.skeleton__line {
   width: 100%;
   height: 20px;
 
   background: linear-gradient(93deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
+}
+
+.skeleton__line_title-33percent {
+  width: 33.39805825%;
+}
+
+.skeleton__line_title-49percent {
+  width: 49.90291262%;
 }
