--- a/05-lection3/01-tooltip/styles.css
+++ b/05-lection3/01-tooltip/styles.css
@@ -1,8 +1,5 @@
 .wrap {
-  width: 100%;
-  height: 100%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding-top: 150px;
+  padding-left: 150px;
+  padding-right: 150px;
 }
