--- a/components/components-list/components-list.css
+++ b/components/components-list/components-list.css
@@ -1,1 +1,35 @@
 .components-list {}
+
+.components-list__title {
+  color: #000;
+
+  /* h4 */
+  /* font-family: Inter; */
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 130% */
+}
+
+.components-list__list {
+  margin-top: 16px;
+}
+
+.components-list__list-item:last-child {
+  margin-top: 30px;
+}
+
+.components-list__list-item {
+  color: var(--Black, #212429);
+
+  /* small */
+  /* font-family: Inter; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+}
+
+.components-list__list-item_active {
+  color: var(--Notificaiton, #D84910);
+}
