--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -43,3 +43,11 @@
 
   background: linear-gradient(93deg, #DDE2E5 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
 }
+
+.skeleton__content_title-short {
+  width: 172px;
+}
+
+.skeleton__content_title-description {
+  width: 257px;
+}
