--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -1,5 +1,4 @@
 .calendar {
-  width: 100%;
   max-width: 304px;
 
   border: 1px solid var(--grey-3);
@@ -15,11 +14,10 @@
 
 .calendar__title {
   color: #334D6E;
-  /* font-family: Inter; */
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
 
   text-align: center;
 }
@@ -48,31 +46,21 @@
   align-content: center;
 
   color: var(--334-d-6-e, #334D6E);
-  /* font-family: Source Sans Pro; */
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; /* 125% */
+  line-height: 20px;
 }
 
 .calendar__cell_day-week {
   color: var(--90-a-0-b-7, #90A0B7);
   text-align: center;
-  /* font-family: Inter; */
   font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 142.857% */
 }
 
 .calendar__cell_edges-range {
   color: #FFF;
   text-align: center;
-  /* font-family: Source Sans Pro; */
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 125% */
 
   background: #4263EB;
 }
