--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import '../../03-lection1/01-button/button.css';
 
 @import '../../components/wrapper/wrapper.css';
+@import '../../components/container/container.css';
 
 @import '../../components/header/header.css';
 @import '../../components/main/main.css';
