Страница компонента готова

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,8 @@
 @import '../../components/footer/footer.css';
 
 @import '../../components/card/card.css';
+@import '../../components/components-list/components-list.css';
+@import '../../components/component-content/component-content.css';
 
 :root {
     --white: #ffffff;
