--- a/components/card/card.css
+++ b/components/card/card.css
@@ -44,3 +44,23 @@
   font-weight: 400;
   line-height: normal;
 }
+
+@media only screen and (max-width: 475px) {
+  .card {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 10px;
+
+    height: 210px;
+  }
+
+  .card__bottom {
+    padding-top: 12px;
+    border-top: 1px solid var(--grey-3);
+  }
+
+  .card__desc {
+    display: none;
+  }
+}
