--- a/components/container/container.css
+++ b/components/container/container.css
@@ -4,3 +4,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 1150px) {
+  .container {
+    width: 95%;
+  }
+}
