--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -38,3 +38,9 @@
   font-weight: 400;
   line-height: 24px; /* 150% */
 }
+
+@media only screen and (max-width: 1150px) {
+  .footer__desc {
+    width: 58.18181818%;
+  }
+}
