--- a/components/header/header.css
+++ b/components/header/header.css
@@ -15,10 +15,16 @@
 .header__title {
   color: var(--black, #212429);
 
-  /* h1 */
-  /* font-family: Inter; */
   font-size: 50px;
   font-style: normal;
   font-weight: 500;
-  line-height: 64px; /* 128% */
+  line-height: 64px;
+}
+
+@media only screen and (max-width: 475px) {
+  .header__title {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 38px;
+  }
 }
