--- a/components/main/main.css
+++ b/components/main/main.css
@@ -34,3 +34,49 @@
 }
 
 .main__controls {}
+
+@media only screen and (max-width: 1150px) {
+  .main__cards {
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-gap: 16px;
+  }
+
+  .main__card {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1075px) {
+  .main__cards {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .main__cards {
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  }
+}
+
+@media only screen and (max-width: 886px) {
+  .main__cards {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
+
+@media only screen and (max-width: 648px) {
+  .main__cards {
+    grid-template-columns: repeat(auto-fill, minmax(270px, 350px));
+
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 475px) {
+  .main__cards {
+    grid-template-columns: repeat(auto-fill, minmax(164px, 1fr));
+  }
+}
