--- a/components/container/container.css
+++ b/components/container/container.css
@@ -7,6 +7,8 @@
 
 @media only screen and (max-width: 1150px) {
   .container {
-    width: 95%;
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
