--- a/components/container/container.css
+++ b/components/container/container.css
@@ -4,3 +4,16 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 1150px) {
+  .container {
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .container__component-page {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
