--- a/components/component-content/component-content.css
+++ b/components/component-content/component-content.css
@@ -24,3 +24,11 @@
 }
 
 .component-content__mount {}
+
+@media only screen and (max-width: 475px) {
+  .component-content{
+    background-color: red;
+
+    width: 100%;
+  }
+}
