--- a/components/component-content/component-content.css
+++ b/components/component-content/component-content.css
@@ -27,8 +27,23 @@
 
 @media only screen and (max-width: 475px) {
   .component-content{
-    background-color: red;
-
     width: 100%;
+
+    padding-left: 16px;
+    padding-right: 16px;
+
+    row-gap: 16px;
   }
+
+  .component-content__title {
+    color: var(--Gray-4, #495057);
+
+    /* h4 */
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 130% */
+  }
+
+  .component-content__mount {}
 }
