--- a/06-lection4/02-background-image/background-image.css
+++ b/06-lection4/02-background-image/background-image.css
@@ -6,22 +6,17 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+
+  background-image: url(./public/forest_400.jpg);
 }
 
-@media (max-width: 480px) {
-    .background-image {
-      background-image: url(./public/forest_400.jpg);
-    }
-}
-
-
-@media (min-width: 401px) and (max-width: 768px) {
+@media (min-width: 401px) {
   .background-image {
     background-image: url(./public/forest_768.jpg);
   }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 769px) {
   .background-image {
     background-image: url(./public/forest_1024.jpg);
   }
