--- a/components/main/main.css
+++ b/components/main/main.css
@@ -35,7 +35,7 @@
 
 .main__controls {}
 
-.main__component-page {
+.main_component-page {
   flex-grow: 1;
   background: #F9FAFC;
 
@@ -72,5 +72,5 @@
     display: none;
   }
 
-  .main__component-page {}
+  .main_component-page {}
 }
