--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -47,3 +47,11 @@
 .checkbox__input:focus ~ .checkbox__state .checkbox__title {
   text-decoration: underline;
 }
+
+.checkbox__input:disabled ~ .checkbox__state .checkbox__control {
+  background: var(--gray-2, #DDE2E5);
+}
+
+.checkbox__input:disabled ~ .checkbox__state .checkbox__title {
+  color: var(--gray-2, #DDE2E5);
+}
